1. DefaultArg only visible in their package. 2. Simplify AspectJ execution: Use agent.